--- a/S7.html
+++ b/S7.html
@@ -10,23 +10,21 @@
 		<link rel="stylesheet" href="product_detail.css">			
 	</head>
 <body class = "body">
-	<hearder id=header>
+	<hearder id="header">
 	<h1>BEST Electronics</h1>
-
-  <nav><ul>
+	<nav><ul>
     <li><a href="">HOME</a></li>
     <li><a href="">ABOUT</a></li>
     <li class="dropdown">
-    <a href="#" class="dropbtn">PRODUCTS</a>
+    <a href="www.google.com" class="dropbtn">PRODUCTS</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="http://www.yahoo.com">Link 1</a>
+      <a href="http://www.douban.com">Link 2</a>
+      <a href="http://www.youtube.com">Link 3</a>
     </div>
     </li>
     <li><a href="">CONTACT</a></li>
-  </ul>
-  </nav>   
+  </ul></nav>   
  </hearder>
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
