Added files via upload
4/13 second version

--- a/LG.html
+++ b/LG.html
@@ -51,19 +51,19 @@
 				<tr><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></tr>
 				<tr><p id = "details"> Smooth design and a powerful Snapdragon quad-core processor are yours with this T-Mobile LG K7. Android Lollipop 5.1 ensures seamless operation and keeps you on top of your game, while the large 5-inch screen delivers flawless visuals and excellent responses. A 2,045 mAh battery gives this T-Mobile LG K7 long-lasting power to keep it going throughout the day.</p>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p> Qualcomm Snapdragon 210 processor</p>
 					<p> Android 5.1 Lollipop OS</p>
 					<p>4G LTE speed</p>
 					<p>5" TFT touch screen</p>
 					<p>5MP rear-facing camera</p>
-				</div>
+				</div></tr>
 			</table>
 		</section>
 		<section id = "picture">
 			
-			<img src= "img/LG.jpg" alt = "Straight Talk LG Access Android Prepaid Smartphone" style= "width:40%;height:70%;">
+			<img src= "img/LG2.jpg" alt = "Straight Talk LG Access Android Prepaid Smartphone">
 			
 		</section>
 	</div>
