--- a/S7.html
+++ b/S7.html
@@ -24,8 +24,8 @@
     </div>
     </li>
     <li><a href="">CONTACT</a></li>
-  </ul></nav>   
- </hearder>
+  	</ul></nav>   
+ 	</hearder>
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
   	<img src="img/ebanner.jpg" alt="cellphone_banner" >
@@ -45,10 +45,9 @@
 			<table id = "product_detail">
 				<tr><h3 id = "price">Price: $299</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
-				<tr><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></tr>
-				<tr><p id = "details">Work, rest and play with the Samsung Galaxy S7 edge. A massive 5.5-inch Super AMOLED touchscreen goes all the way to the edges of the phone so that you get the maximum area possible to work with. Solid water resistance, great processing and masses of memory round out this Samsung Galaxy S7 edge.</p>
-				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
+				<tr><p id = "details">Work, rest and play with the Samsung Galaxy S7 edge. A massive 5.5-inch Super AMOLED touchscreen goes all the way to the edges of the phone so that you get the maximum area possible to work with. Solid water resistance, great processing and masses of memory round out this Samsung Galaxy S7 edge.</p></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p>Qualcomm Snapdragon 820 processor</p>
 					<p> Android 6.0 Marshmallow OS</p>
@@ -59,13 +58,14 @@
 					<p>Water-resistant IP68</p>
 					<p>Dual Edge Design and Experience</p>
 				</div>
+				</tr>
 			</table>
+
 		</section>
 		<section id = "picture">
-			
-			<img src= "img/s7.jpg" alt = "Samsun-S7-edge" style= "width:40%;height:70%;">
-			
+		<img src= "img/s7.jpg" alt = "Samsun-S7-edge">
 		</section>
+	
 	</div>
 
 	
