--- a/iphone6s.html
+++ b/iphone6s.html
@@ -10,24 +10,22 @@
 		<link rel="stylesheet" href="product_detail.css">		
 	</head>
 <body class = "body">
-	<hearder id=header>
+	<hearder id="header">
 	<h1>BEST Electronics</h1>
-
-  <nav><ul>
-    <li><a href="home.html">HOME</a></li>
+	<nav><ul>
+    <li><a href="">HOME</a></li>
     <li><a href="">ABOUT</a></li>
     <li class="dropdown">
-    
+    <a href="www.google.com" class="dropbtn">PRODUCTS</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">CellPhones</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="http://www.yahoo.com">Link 1</a>
+      <a href="http://www.douban.com">Link 2</a>
+      <a href="http://www.youtube.com">Link 3</a>
     </div>
     </li>
     <li><a href="">CONTACT</a></li>
-  </ul>
-  </nav>   
- </hearder>
+  	</ul></nav>   
+ 	</hearder>
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
   	<img src="img/ebanner.jpg" alt="cellphone_banner" >
@@ -50,7 +48,7 @@
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details"> 4.7-inch Retina HD display with 3D Touch. 7000 series aluminum and stronger cover glass. An A9 chip with 64-bit desktop-class architecture. All new 12MP iSight camera with Live Photos. Touch ID. Faster LTE and Wi-Fi. Long battery life and iOS 9 and iCloud. All in a smooth, continuous unibody design.</p>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p> 5.5-inch (diagonal) Retina HD display with 1920-by-1080 resolution</p>
 					<p> 3D Touch</p>
@@ -61,12 +59,12 @@
 					<p>Second-generation Touch ID</p>
 					<p>iOS 9 and iCloud</p>
 					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
-				</div>
+				</div></tr>
 			</table>
 		</section>
 		<section id = "picture">
 			
-			<img src= "img/iphone6s.jpg" alt = "iphone 6s" style= "width:40%;height:70%;">
+			<img src= "img/iphone6s2.jpg" alt = "iphone 6s">
 			
 		</section>
 	</div>
