--- a/iphonese.html
+++ b/iphonese.html
@@ -51,7 +51,7 @@
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details">iPhone SE features a 4-inch Retina display, an A9 chip with 64-bit desktop-class architecture, the Touch ID fingerprint sensor, a 12MP iSight camera, a FaceTime HD camera with Retina Flash, Live Photos, LTE and fast Wi-Fi, iOS 9, and iCloud.</p>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p> 4-inch (diagonal) Retina display with 1136-by-640 resolution</p>
 					<p> Touch ID fingerprint sensor</p>
@@ -63,11 +63,12 @@
 					<p>iOS 9 and iCloud</p>
 					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
 				</div>
+				</tr>
 			</table>
 		</section>
 		<section id = "picture">
 			
-			<img src= "img/iphonese.jpg" alt = "iphone se" style= "width:40%;height:70%;">
+			<img src= "img/iphonese2.jpg" alt = "iphone se" >
 		</section>
 	</div>
 
