--- a/samgalacore.html
+++ b/samgalacore.html
@@ -51,7 +51,7 @@
 				<tr><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></tr>
 				<tr><p id = "details">Samsung Galaxy Core Prime No-Contract Cell Phone for T-Mobile Prepaid: Connect with your friends at home or on the go with this cell phone, which features built-in Wi-Fi and 4G LTE speed for fast, flexible Internet connectivity. The 5.0MP camera lets you snap photos.</p>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p> Quad-core processor with 1GB of RAM</p>
 					<p> Android 5.1 Lollipop OS</p>
@@ -60,11 +60,12 @@
 					<p>8GB internal memory plus microSD slot</p>
 					<p>Use your smartphone as a mobile hotspot</p>
 				</div>
+				</tr>
 			</table>
 		</section>
 		<section id = "picture">
 			
-			<img src= "img/galaxycore.jpg" alt = "Samsung Galaxy Core" style= "width:40%;height:70%;">
+			<img src= "img/galaxycore2.jpg" alt = "Samsung Galaxy Core">
 			
 		</section>
 	</div>
