--- a/tablet.html
+++ b/tablet.html
@@ -79,10 +79,11 @@ nav .dropdown:hover .dropdown-content {
     width: 100%;
     height:150px;
     position: relative;
-    display: block;
+
     padding: 20px 0 20px 0;
 
     border-bottom: 1px solid  #d1d1e0;
+     display:inline-block;
 } 
 /*div.img:hover {
     border: 1px solid #777;
@@ -95,10 +96,13 @@ nav .dropdown:hover .dropdown-content {
   
   padding: 10px
 
+
 }
 .desc {
     float:left;
     margin-left:20px;
+    width:600px;
+    height:150px;
     
 }
  .title-heading{
@@ -140,7 +144,6 @@ nav .dropdown:hover .dropdown-content {
   color:white;
   clear:both;
   text-align:center;
-}
 </style>
 </head>
 
@@ -166,7 +169,7 @@ nav .dropdown:hover .dropdown-content {
     <!-- <h1 class="title-banner">Cellphones</h1> -->
     <img src="img/cellphone_banner.jpg" alt="cellphone_banner" >
   </div>
-  <div class="section"> 
+  <section id ="section"> 
 
   <header>
     <h2>Tablets</h2>
@@ -256,8 +259,7 @@ nav .dropdown:hover .dropdown-content {
     </div>
     
   </div>
- 
-</div> 
+</section>
  
 
   <div class="footer">
