--- a/laptop.html
+++ b/laptop.html
@@ -79,10 +79,11 @@ nav .dropdown:hover .dropdown-content {
     width: 100%;
     height:150px;
     position: relative;
-    display: block;
+
     padding: 20px 0 20px 0;
 
     border-bottom: 1px solid  #d1d1e0;
+     display:inline-block;
 } 
 /*div.img:hover {
     border: 1px solid #777;
@@ -95,10 +96,13 @@ nav .dropdown:hover .dropdown-content {
   
   padding: 10px
 
+
 }
 .desc {
     float:left;
     margin-left:20px;
+    width:600px;
+    height:150px;
     
 }
  .title-heading{
