--- a/cellphone.html
+++ b/cellphone.html
@@ -79,45 +79,50 @@ nav .dropdown:hover .dropdown-content {
     width: 100%;
     height:150px;
     position: relative;
-    display: block;
+
     padding: 20px 0 20px 0;
 
     border-bottom: 1px solid  #d1d1e0;
+     display:inline-block;
 } 
 /*div.img:hover {
     border: 1px solid #777;
 }*/
 .row img {
+  width:180px;
+  height: 150px;
   float:left;
   width:auto;
-  height: 150px;
+  
   padding: 10px
+
+
 }
 .desc {
     float:left;
-    padding: 5px;
+    margin-left:20px;
+    width:600px;
+    height:150px;
     
 }
-.desc .title-heading{
+ .title-heading{
+  font-family: 'Source Sans Pro', sans-serif;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  height: 22px;
   margin: 0;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 70%
+
 }
-.desc .title-content{
+.title-content{
   float: left;
   width: 60%;
+
   
 }
 
 .title-content p{
   color: #4c4a37; font-family: 'Source Sans Pro', sans-serif; font-size: 12px; 
 }
-
 .desc a:link {
     color:black;
     background-color: transparent;
@@ -133,17 +138,13 @@ nav .dropdown:hover .dropdown-content {
     background-color: transparent;
   
 }
-
 .footer{
   padding:5px;
   background-color: #333;
-   color:white;
-    clear:both;
-    text-align:center;
+  color:white;
+  clear:both;
+  text-align:center;
 }
-/*.title-content .p{
-  font-size:8px;
-}*/
 </style>
 </head>
 
@@ -169,6 +170,7 @@ nav .dropdown:hover .dropdown-content {
     <!-- <h1 class="title-banner">Cellphones</h1> -->
     <img src="img/cellphone_banner.jpg" alt="cellphone_banner" >
   </div>
+
   <div class="section"> 
 
   <header>
@@ -178,62 +180,81 @@ nav .dropdown:hover .dropdown-content {
 
   <div class ="table">
   <div class="row">
-    <img src="img/cp1.jpg" alt="cellphone1" >
+    <img src="img/galaxycore.jpg" alt="cellphone1" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">T-Mobile Samsung Prepaid Galaxy Core Prime Smartphone</a>
+       <a href="">Samsung Galaxy Core Prime No-Contract Cell Phon</a>
       </h4>
       <div class="title-content"> 
-        <h2>$120.00</h2>
-        <p>4G LTE network
-          Android 5.1 (Lollipop) OS
-          Talk Time: up to 14.8 hours</p>
+        <h2>$199.00</h2>
+        <p>Quad-core processor with 1GB of RAM, Android 5.1 Lollipop OS, 4.3" touch screen,5.0MP rear camera
+        </p>
       </div>
     </div>
 </div>
 
  <div class="row">
-    <img src="img/cp2.jpg" alt="cellphone1" >
+    <img src="img/iphone6s.jpg" alt="cellphone2" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">T-Mobile Samsung Prepaid Galaxy Core Prime Smartphone</a>
+       <a href="">iPhone 6s</a>
       </h4>
       <div class="title-content"> 
-        <h2>$120.00</h2>
-        <p>4G LTE network
-          Android 5.1 (Lollipop) OS
-          Talk Time: up to 14.8 hours</p>
+        <h2>$299.00</h2>
+        <p>4G LTE network,
+          iOS 9 and iCloud,
+          3D Touch</p>
       </div>
     </div>
 </div>
 
-<div class="row">
-  <img src="img/cp3.jpg" alt="cellphone2" >
+ <div class="row">
+    <img src="img/LG2.jpg" alt="cellphone3" >
     <div class="desc">
-      <h4 class="title-heading">Straight Talk LG Access Android Prepaid Smartphone</h4>
-      <h3>$120.00</h3>
-      <p>Add a description of the image here</p>
+      <h4 class="title-heading">
+       <a href="">T-Mobile LG K7</a>
+      </h4>
+      <div class="title-content"> 
+        <h2>$89.00</h2>
+        <p>Qualcomm Snapdragon 210 processor
+        Android 5.1 Lollipop OS
+        4G LTE speed
+        </p>
+      </div>
     </div>
 </div>
 
-<div class="row">
-  <img src="img/cp4.jpg" alt="cellphone2" >
+ <div class="row">
+    <img src="img/s7.jpg" alt="cellphone4" >
     <div class="desc">
-      <h4></h4>
-      <h3>$120.00</h3>
-      <p>Add a description of the image here</p>
+      <h4 class="title-heading">
+       <a href="">Samsung Galaxy S7 edge</a>
+      </h4>
+      <div class="title-content"> 
+        <h2>$299</h2>
+        <p>Qualcomm Snapdragon 820 processor,
+        Android 6.0 Marshmallow OS,
+        5.5" Super AMOLED Quad HD touch screen
+        </p>
+      </div>
     </div>
 </div>
 
-<div class="row">
-  <img src="img/cp5.jpg" alt="cellphone2" >
+ <div class="row">
+    <img src="img/iphonese2.jpg" alt="cellphone5" >
     <div class="desc">
-      <h3>$120.00</h3>
-      <p>Add a description of the image here</p>
+      <h4 class="title-heading">
+       <a href="">iPhone SE</a>
+      </h4>
+      <div class="title-content"> 
+        <h2>$49.00</h2>
+        <p4>-inch (diagonal) Retina display with 1136-by-640 resolution,
+        Touch ID fingerprint sensor
+        </p>
+      </div>
     </div>
 </div>
 </div>
-
   
 </div> 
  
