--- a/laptop.html
+++ b/laptop.html
@@ -1,151 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
- <!--  <title>Cellphone</title>
+  <title>Laptops</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/product.css" type="text/css">
+  <link rel="stylesheet" href="css/allProducts.css" type="text/css">
   <meta name="author" content="Misook Sohn">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
-<style>
-.body{
-  width:80%;
-  overflow: auto;
-    margin: auto;
-}
-#header{
-    font-family: "Open Sans", Arial, sans-serif;
-    text-align: left;
-    padding:20px;
-}
-nav ul {
-    list-style-type: none;
-   /*margin-top: -20px;
-    margin-left: -20px;*/
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-nav li {
-    float: left;
-}
-  
-/* Change the link color to #111 (black) on hover */
-/*nav li a:hover {
-    background-color: #111;
-}*/
-nav li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-nav li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-}
-nav li.dropdown {
-    display: inline-block;
-    
-}
-nav .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-nav .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-nav .dropdown-content a:hover {background-color: #f1f1f1;  }
-nav .dropdown:hover .dropdown-content {
-    display: block;
-    overflow:visible;
-    z-index:100;
-}
-.pagebanner img{
-  width: 100%;
-  height: 400px;
-}
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-
-.row {
-    float:left;
-    width: 100%;
-    height:150px;
-    position: relative;
-
-    padding: 20px 0 20px 0;
-
-    border-bottom: 1px solid  #d1d1e0;
-     display:inline-block;
-} 
-/*div.img:hover {
-    border: 1px solid #777;
-}*/
-.row img {
-  width:180px;
-  height: 150px;
-  float:left;
-  width:auto;
-  
-  padding: 10px
-
-
-}
-.desc {
-    float:left;
-    margin-left:20px;
-    width:600px;
-    height:150px;
-    
-}
- .title-heading{
-  font-family: 'Source Sans Pro', sans-serif;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  margin: 0;
-
-}
-.title-content{
-  float: left;
-  width: 60%;
-
-  
-}
-
-.title-content p{
-  color: #4c4a37; font-family: 'Source Sans Pro', sans-serif; font-size: 12px; 
-}
-.desc a:link {
-    color:black;
-    background-color: transparent;
-    text-decoration: none;
-}
-.desc a:visited{
-    color:black;
-    background-color: transparent;
-    text-decoration: none;
-}
-.desc a:hover {
-    color: blue;
-    background-color: transparent;
-  
-}
-.footer{
-  padding:5px;
-  background-color: #333;
-  color:white;
-  clear:both;
-  text-align:center;
-}
-</style>
 </head>
 
 <body class="body">
