Added files via upload

--- a/ipad2.html
+++ b/ipad2.html
@@ -46,12 +46,13 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id = "title"> iPad 2 </h1></tr>
 				<tr><h3 id = "price">Price: $199</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details"> 9.7-inch HD display. Supports at most IOS7. Supports high-lagging performance in MOBA games with a highest lagging time 2.5s. Hard but weak because furious players sometimes knock them and the screens just crash.</tr>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p> 5.5-inch (diagonal) Retina HD display with 1920-by-1080 resolution</p>
 				
@@ -61,6 +62,7 @@
 					<p>Up to 10 hours of battery life if not using</p>
 	
 				</div>
+				</tr>
 			</table>
 		</section>
 		<section id = "picture">
