--- a/iphonese.html
+++ b/iphonese.html
@@ -46,6 +46,7 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id = "title">iPhoneSE</h1></tr>
 				<tr><h3 id = "price">Price: $49</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
@@ -61,7 +62,7 @@
 					<p>1.2MP FaceTime HD camera with Retina Flash</p>
 					<p>Second-generation Touch ID</p>
 					<p>iOS 9 and iCloud</p>
-					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
+					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p><
 				</div>
 				</tr>
 			</table>
