--- a/y510p.html
+++ b/y510p.html
@@ -46,20 +46,22 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id ="title"> Y510P</h1></tr>
 				<tr><h3 id = "price">Price: $799</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details">This laptop puts some serious power behind your multimedia whether games, movies, or music. Premium graphics, audio, and processing technology add that extra boost to whatever entertainment you have queued up.</P>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<P>Intel Core i7-4700MQ 2.4 GHz Processor (6 MB Cache)</P>
 					<P>8 GB DDR3 RAM</P>
 					<P>Bluetooth Version 4.0, 1 TB 5400 rpm HDD and 8 GB Solid-State Drive Memory</P>
 					<P>Non-Touchscreen 15.6-Inch Display, Dual NVIDIA GeForce GT750M Discrete Graphics</P>
 					<P>Windows 8, 4-hour battery life</P>
-	
+			
 				</div>
+				</tr>
 			</table>
 		</section>
 		<section id = "picture">
