--- a/LG.html
+++ b/LG.html
@@ -46,6 +46,7 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id = "title">T-Mobile LG K7</h1></tr>
 				<tr><h3 id = "price">Price: $89</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></tr>
