--- a/S7.html
+++ b/S7.html
@@ -43,6 +43,7 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id = "title"> T-Mobile Samsung Prepaid Galaxy Core Prime Smartphone</h1></tr>
 				<tr><h3 id = "price">Price: $299</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
