--- a/ipad_air2.html
+++ b/ipad_air2.html
@@ -46,12 +46,13 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id = "title"> iPad Air 2</h1></tr>
 				<tr><h3 id = "price">Price: $499</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details">At just 6.1mm, the Apple iPad Air 2 is robust and capable of supporting many needs. It has a re-engineered 9.7" Retina display that makes watching video and navigating apps a breeze. This Apple iPad Air Tablet also features an innovative and revolutionary Touch ID fingerprint sensor. Inside, a powerful A8X chip with 64-bit architecture offers you plenty of power. A new iSight camera and an improved FaceTime HD camera make it quick and easy to chat with friends and hold meetings. Available with an elegant gold finish, the iPad Air 2 also comes with iOS 8, iCloud, and up to 10 hours of battery life. Several productivity and creativity apps help to ensure that you can jump into your most creative ideas as soon as you dream them up. Easy access to the App Store comes built right in, so you can find the software you need for gaming, entertainment, productivity and social connections right away.</p>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p>iPad Air 2 (silver) features a crystal-clear 9.7" Retina display (diagonal)</p>
 					<p>Touch ID fingerprint sensor</p>
@@ -62,6 +63,7 @@
 					<p>Apple iPad Air tablet supports up to 10 hours of battery life</p>
 	
 				</div>
+				</tr>
 			</table>
 		</section>
 		<section id = "picture">
