--- a/mba.html
+++ b/mba.html
@@ -46,12 +46,13 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id ="title">Macbook Air </h1></tr>
 				<tr><h3 id = "price">Price: $999</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details">The new MacBook Air is up to 2.5x faster than before. It features the latest Intel Core i5 dual-core processor, high-speed Thunderbolt I/O, a backlit keyboard, and OS X Lion, the next major release of the world's most advanced desktop operating system. MacBook Air also comes standard with flash storage, so it boots up in seconds, launches apps quickly, and wakes from sleep in an instant. And a long-lasting battery powers MacBook Air for up to 7 hours and offers up to 30 days of standby time. All in a durable unibody design that's thin, light, and ready for anything.</P>
 				</tr>
-				<tr><h4 id = "feature_title">Product Features</h4></tr>
+				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
 					<p>1.7 GHz Intel Core i5 dual-core processor</p>
 					<p>4GB DDR3 RAM</p>
@@ -60,6 +61,7 @@
 					<p>Mac OS, 7 hours Battery Life</p>
 	
 				</div>
+				</tr>
 			</table>
 		</section>
 		<section id = "picture">
