--- a/new_ipad.html
+++ b/new_ipad.html
@@ -46,6 +46,7 @@
 	<div id = "row3">
 		<section id = "info">
 			<table id = "product_detail">
+				<tr><h1 id = "title"> New iPad2 Air</h1></tr>
 				<tr><h3 id = "price">Price: $259</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
