Added files via upload

--- a/iphonese.html
+++ b/iphonese.html
@@ -62,14 +62,14 @@
 					<p>1.2MP FaceTime HD camera with Retina Flash</p>
 					<p>Second-generation Touch ID</p>
 					<p>iOS 9 and iCloud</p>
-					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p><
+					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
 				</div>
 				</tr>
 			</table>
 		</section>
 		<section id = "picture">
 			
-			<img src= "img/iphonese2.jpg" alt = "iphone se" >
+			<img src= "img/iphonese.png" alt = "iphone se" >
 		</section>
 	</div>
 
