--- a/cellphone.html
+++ b/cellphone.html
@@ -18,9 +18,9 @@
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="cellphone.html">Cellphones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
     <li><a href="">Contact</a></li>
@@ -43,7 +43,7 @@
     <img src="img/galaxycore.jpg" alt="cellphone1" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">Samsung Galaxy Core Prime No-Contract Cell Phone</a>
+       <a href="samgalacore.html">Samsung Galaxy Core Prime No-Contract Cell Phone</a>
       </h4>
       <div class="title-content"> 
         <h2>$199.00</h2>
@@ -57,7 +57,7 @@
     <img src="img/iphone6s.jpg" alt="cellphone2" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">iPhone 6s</a>
+       <a href="iphone6s.html">iPhone 6s</a>
       </h4>
       <div class="title-content"> 
         <h2>$299.00</h2>
@@ -72,7 +72,7 @@
     <img src="img/LG2.jpg" alt="cellphone3" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">T-Mobile LG K7</a>
+       <a href="LG.html">T-Mobile LG K7</a>
       </h4>
       <div class="title-content"> 
         <h2>$89.00</h2>
@@ -88,7 +88,7 @@
     <img src="img/s7.jpg" alt="cellphone4" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">Samsung Galaxy S7 edge</a>
+       <a href="S7.html">Samsung Galaxy S7 edge</a>
       </h4>
       <div class="title-content"> 
         <h2>$299</h2>
@@ -101,14 +101,14 @@
 </div>
 
  <div class="row">
-    <img src="img/iphonese2.jpg" alt="cellphone5" >
+    <img src="img/iphonese.png" alt="cellphone5" >
     <div class="desc">
       <h4 class="title-heading">
-       <a href="">iPhone SE</a>
+       <a href="iphonese.html">iPhone SE</a>
       </h4>
       <div class="title-content"> 
         <h2>$49.00</h2>
-        <p4>-inch (diagonal) Retina display with 1136-by-640 resolution,
+        <p4>4-inch (diagonal) Retina display with 1136-by-640 resolution,
         Touch ID fingerprint sensor
         </p>
       </div>
