--- a/laptop.html
+++ b/laptop.html
@@ -19,9 +19,9 @@
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="cellphone.html">Cellphones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
     <li><a href="">Contact</a></li>
