--- a/S7.html
+++ b/S7.html
@@ -7,7 +7,7 @@
 		<meta name = "Description", content = "Product Details">
 		<meta name = "keywords", content = "IMAGE, PRICE, INFO">
 		<meta name = "author", content = "Jessica Zeng">
-		<link rel="stylesheet" href="product_detail.css">			
+		<link rel="stylesheet" href="css/product_detail.css">			
 	</head>
 <body class = "body">
 	<hearder id="header">
