--- a/Homepage.html
+++ b/Homepage.html
@@ -239,9 +239,9 @@ body {font-family: Verdana,sans-serif;margin:0}
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="phones.html">Phones</a>
+      <a href="cellphone.html">Phones</a>
       <a href="laptop.html">Laptops</a>
-      <a href="tablets.html">Tablets</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
     <li><a href="">Contact</a></li>
