--- a/form.html
+++ b/form.html
@@ -54,30 +54,7 @@ select{
     border: 5px solid rgb(220,220,220);
 }
 </style>
-<script>
-	function check(){
-	if (document.getElementById('fname').value==""){
-		alert("You have to input a name.")}
-	else if (document.getElementById('email').value==""){
-		alert("You have to input a valid email.")}
-	else if (document.getElementById('homeadd').value==""){
-		alert("You have to input a valid home address.")}
-	else if (document.getElementById('ccn').value==""){
-		alert("You have to input a valid credit card number.")}
-	else if (document.getElementById('nc').value==""){
-		alert("You have to input a valid name on the card.")}
-	else if (document.getElementById('ed').value==""){
-		alert("You have to input a valid expiration date.")}
-	else if (document.getElementById('ccn3').value==""){
-		alert("You have to input a valid three-digit security number.")}
-	else{
-		submitform();
-}
-}
-	function submitform(){
-		window.open('mailto:clu10@uci.edu?subject=Your order confirmation&body=Your order will be shipped in two business days.');
-}
-</script>
+
 </head>
 <body style="background-color:rgb(220,220,220)">
 
@@ -108,15 +85,47 @@ select{
 	<h2>Credit card information:</h2>
 	<p>Card number:</p><input type="text" id="ccn" name="ccn" required>
 	<p>Name on the card:</p><input type="text" id="nc" name="nc" required>
-	<p>Expiration date (Month/Day/Year; For example:08/03/2018):</p><input type="text" id="ed" name="ed" required>
+	<p>Expiration date (dd/mm/Year; For example:08/03/2018):</p><input type="text" id="ed" name="ed" required>
 	<p>Three-digit security number:</p><input type="text" id="ccn3" name="ccn3" required>
     </li>
     
   
-    <br></br><input type="submit" value="Submit" onclick="check();"/>
+    <br/><br/><input type="submit" value="Submit" onclick="check();"/>
 	
   </form>
 </div>
+<script>
+
+	function submitform(){
+		window.open("mailto:clu10@uci.edu?subject=Your%20order%20confirmation&body=Your%20order%20will%20be%20shipped%20in%20two%20business%20days.");
+}
+
+	function check(){
+	var reg = "/(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d/";
+	if (document.getElementById('fname').value==""){
+		alert("You have to input a name.");
+	}
+	else if (document.getElementById('email').value=="" || document.getElementById('email').value.search('@')==-1){
+		alert("You have to input a valid email.")}
+	else if (document.getElementById('homeadd').value==""){
+		alert("You have to input a valid home address.")}
+	else if (document.getElementById('ccn').value=="" || document.getElementById('ccn').value.length!=16){
+		alert("You have to input a valid credit card number.")}
+	else if (document.getElementById('nc').value==""){
+		alert("You have to input a valid name on the card.")}
+	else if (document.getElementById('ed').value=="" || (document.getElementById('ed').value.match(reg))==false){
+		alert("You have to input a valid expiration date.")}
+	
+	else if ((document.getElementById('ccn3').value=="") || (document.getElementById('ccn3').value.length!=3)){
+		alert("You have to input a valid three-digit security number.")}
+	else{
+		submitform();
+	}
+}
+
+
+	
+</script>
 
 </body>
 </html>
