links finished except about.html

--- a/4:14/Nextbook.html
+++ b/4:14/Nextbook.html
@@ -15,17 +15,17 @@
 	<h1>BEST Electronics</h1>
 
   <nav><ul>
-    <li><a href="Homepage.html">HOME</a></li>
-    <li><a href="about.html">ABOUT</a></li>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
       <a href="cellphone.html">CellPhones</a>
       <a href="tablet.html">Tablets</a>
       <a href="laptop.html">Laptops </a>
     </div>
     </li>
-    <li><a href="">CONTACT</a></li>
+    
   </ul>
   </nav>   
  </hearder>
@@ -46,8 +46,8 @@
 	<div id = "row3">
 		<div id = "info">
 			<table id = "product_detail">
-				<tr><h1 id = "title"> HP Flyer Red 15.6" 15-f272wm Laptop PC</h1></tr>
-				<tr><h3 id = "price">Price: $12</h3></tr>
+				<tr><h1 id = "title"> Nextbook Flexx 10.1" 2-in-1 Tablet 2/32GB Intel Quad Core Windows 10</h1></tr>
+				<tr><h3 id = "price">Price: $120</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
 				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details">The Nextbook Flexx 10 2-in-1 tablet is everything you want in a Windows portable device. It's ultra-fast with a 10.1-inch high-resolution (1280 x 800) IPS display and a detachable foldable POGO keyboard with two standard USB 2.0 ports for multiple connections. This new Nextbook Flexx 10 comes with a Quad-Core Intel Atom-based processor for optimal performance and the latest Microsoft Windows 8.1 Operating System. Touch, click or type — you choose what fits your style and activity. All the great apps you need are in the Windows Store, plus you can play Xbox games, music and videos. With 32GB of internal memory, and the option to expand via microSD slot to 64GB more, storage is not an issue. Use Skype to video chat, and get your photos and files from anywhere with OneDrive.</p>
@@ -79,11 +79,11 @@
 
 
 
-</body>
 
-<div = "footer">
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-<div>
+</div>
 	
+</body>
 
 </html>
