--- a/4:14/cellphone.html
+++ b/4:14/cellphone.html
@@ -13,17 +13,17 @@
   <h1>BEST Electronics</h1>
 </hearder>
   <nav><ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">Cellphones</a>
+      <a href="cellphone.html">Cell phones</a>
       <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">Contact</a></li>
+  
   </nav></ul>   
 
   <div class ="pagebanner">
@@ -91,7 +91,7 @@
        <a href="S7.html">Samsung Galaxy S7 edge</a>
       </h4>
       <div class="title-content"> 
-        <h2>$299</h2>
+        <h2>$299.00</h2>
         <p>Qualcomm Snapdragon 820 processor,
         Android 6.0 Marshmallow OS,
         5.5" Super AMOLED Quad HD touch screen
@@ -120,7 +120,7 @@
  
 
   <div class="footer">
-    <p>BEST Electronics</p>
+    <p > 2016 E-BestMart.com, all rights reserved.</p>
   </div>
 </body>
 </html>
