--- a/4:14/iphone6s.html
+++ b/4:14/iphone6s.html
@@ -10,22 +10,27 @@
 		<link rel="stylesheet" href="css/product_detail.css">		
 	</head>
 <body class = "body">
-	<hearder id="header">
+<hearder id="header">
 	<h1>BEST Electronics</h1>
 	<nav><ul>
-    <li><a href="">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+   	<li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    <a href="www.google.com" class="dropbtn">PRODUCTS</a>
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="http://www.yahoo.com">Link 1</a>
-      <a href="http://www.douban.com">Link 2</a>
-      <a href="http://www.youtube.com">Link 3</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
+    </div>
+     <div class="dropdown-content">
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">CONTACT</a></li>
+   
   	</ul></nav>   
- 	</hearder>
+ 	</hearder
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
   	<img src="img/ebanner.jpg" alt="cellphone_banner" >
@@ -33,7 +38,7 @@
  
 	<div id="row2">
 		<ul>
-			<li><a href="home.html">Home</a></li>
+			<li><a href="Homepage.html">Home</a></li>
 			<li> > </li>
     		<li><a href="cellphone.html">Category</a></li>
     		<li> > </li>
@@ -50,29 +55,29 @@
 				</tr>
 				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
-					<p> 5.5-inch (diagonal) Retina HD display with 1920-by-1080 resolution</p>
+					<p style ="background-color:#C8CBCC">5.5-inch (diagonal) Retina HD display with 1920-by-1080 resolution</p>
 					<p> 3D Touch</p>
-					<p>A9 chip with M9 motion coprocessor</p>
+					<p style ="background-color:#C8CBCC">A9 chip with M9 motion coprocessor</p>
 					<p>12MP iSight camera with Focus Pixels, True Tone flash and Live Photos</p>
-					<p>4K video recording at 30 fps and slo-mo video recording for 1080p at 120 fps</p>
+					<p style ="background-color:#C8CBCC">4K video recording at 30 fps and slo-mo video recording for 1080p at 120 fps</p>
 					<p>5MP FaceTime HD camera with Retina Flash</p>
-					<p>Second-generation Touch ID</p>
+					<p style ="background-color:#C8CBCC">Second-generation Touch ID</p>
 					<p>iOS 9 and iCloud</p>
-					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
+					<p style ="background-color:#C8CBCC">LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
 				</div></tr>
 			</table>
 		</section>
-		<section id = "picture">
-			
-			<img src= "img/iphone6s2.jpg" alt = "iphone 6s">
-			
-		</section>
+		<div id = "picture">
+			<div id = "item1"><img  src= "img/6s1.jpg" alt = "6s" ></div>
+			<div id = "item2"><img  src = "img/6s2.jpg" alt = "6s"></div>
+			<div id = "item3"><img  src = "img/6s3.jpg" alt = "6s"></div>	
+		</div>
 	</div>
 
 	
-<footer>
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-</footer>
+</div>
 
 
 </body>
