--- a/4:14/laptop.html
+++ b/4:14/laptop.html
@@ -14,17 +14,16 @@
   <h1>BEST Electronics</h1>
 </hearder>
   <nav><ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
+  <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">Cellphones</a>
+      <a href="cellphone.html">Cell phones</a>
       <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">Contact</a></li>
   </nav></ul>   
 
   <div class ="pagebanner">
@@ -43,7 +42,7 @@
         <img src="img/laptop1.jpg" alt="laptop1" >
         <div class="desc">
             <h4 class="title-heading">
-            <a href="">HP Black Licorice 15.6" 15-F387WM Laptop PC</a>
+            <a href="hpblack.html">HP Black Licorice 15.6" 15-F387WM Laptop PC</a>
             </h4>
           <div class="title-content"> 
             <h2>$320.00</h2>
@@ -59,7 +58,7 @@
         <img src="img/laptop2.jpg" alt="laptop2" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">HP Flyer Red 15.6" 15-f272wm Laptop PC</a>
+            <a href="hpred.html">HP Flyer Red 15.6" 15-f272wm Laptop PC</a>
             </h4>
           <div class="title-content"> 
               <h2>$300.00</h2>
@@ -74,7 +73,7 @@
         <img src="img/laptop3.jpg" alt="laptop3" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">Acer Midnight Black 15.6" Aspire E5-521-26LT Laptop PC</a>
+            <a href="acer.html">Acer Midnight Black 15.6" Aspire E5-521-26LT Laptop PC</a>
             </h4>
           <div class="title-content"> 
               <h2>$219.00</h2>
@@ -90,7 +89,7 @@
         <img src="img/laptop4.jpg" alt="laptop4" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">Dell Black 15.6" Inspiron i3552 Laptop PC </a>
+            <a href="dell.html">Dell Black 15.6" Inspiron i3552 Laptop PC </a>
             </h4>
           <div class="title-content"> 
               <h2>$120.00</h2>
@@ -106,7 +105,7 @@
         <img src="img/laptop5.jpg" alt="laptop5" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">Acer Diamond Black 15.6" Aspire ES1-512-C1PW Laptop PC</a>
+            <a href="acerdiamond.html">Acer Diamond Black 15.6" Aspire ES1-512-C1PW Laptop PC</a>
             </h4>
           <div class="title-content"> 
               <h2>$239.00</h2>
@@ -125,7 +124,7 @@
  
 
   <div class="footer">
-    <p>BEST Electronics</p>
+     <p > 2016 E-BestMart.com, all rights reserved.</p>
   </footer>
 </body>
 </html>
