--- a/4:14/samgalacore.html
+++ b/4:14/samgalacore.html
@@ -11,24 +11,27 @@
 		
 	</head>
 <body class = "body">
-	<hearder id=header>
+	<hearder id="header">
 	<h1>BEST Electronics</h1>
-
-  <nav><ul>
-    <li><a href="">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+	<nav><ul>
+   	<li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    <a href="#" class="dropbtn">PRODUCTS</a>
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
+    </div>
+     <div class="dropdown-content">
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">CONTACT</a></li>
-  </ul>
-  </nav>   
- </hearder>
+   
+  	</ul></nav>   
+ 	</hearder
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
   	<img src="img/ebanner.jpg" alt="cellphone_banner" >
@@ -36,9 +39,9 @@
  
 	<div id="row2">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="Homepage.html">Home</a></li>
 			<li> > </li>
-    		<li><a href="products.html">Category</a></li>
+    		<li><a href="cellphone.html">Category</a></li>
     		<li> > </li>
     		<li class="active">Now</li>
 		</ul>
@@ -54,27 +57,28 @@
 				</tr>
 				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
-					<p> Quad-core processor with 1GB of RAM</p>
+					<p style ="background-color:#C8CBCC">  Quad-core processor with 1GB of RAM</p>
 					<p> Android 5.1 Lollipop OS</p>
-					<p>4.3" touch screen</p>
+					<p style ="background-color:#C8CBCC"> 4.3" touch screen</p>
 					<p>5.0MP rear camera</p>
-					<p>8GB internal memory plus microSD slot</p>
+					<p style ="background-color:#C8CBCC"> 8GB internal memory plus microSD slot</p>
 					<p>Use your smartphone as a mobile hotspot</p>
 				</div>
 				</tr>
 			</table>
 		</section>
-		<section id = "picture">
-			
-			<img src= "img/galaxycore2.jpg" alt = "Samsung Galaxy Core">
-			
-		</section>
+		<div id = "picture">
+			<div id = "item1"><img  src= "img/core1.png" alt = "6s" ></div>
+			<div id = "item2"><img  src = "img/core2.jpg" alt = "6s"></div>
+			<div id = "item3"><img  src = "img/galaxycore.jpg" alt = "6s"></div>	
+		</div>
+	
 	</div>
 
 	
-<footer>
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-</footer>
+</div>
 
 
 </body>
