--- a/4:14/iphonese.html
+++ b/4:14/iphonese.html
@@ -11,24 +11,27 @@
 		
 	</head>
 <body class = "body">
-	<hearder id=header>
+<hearder id="header">
 	<h1>BEST Electronics</h1>
-
-  <nav><ul>
-    <li><a href="home.html">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+	<nav><ul>
+   	<li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">CellPhones</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
+    </div>
+     <div class="dropdown-content">
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">CONTACT</a></li>
-  </ul>
-  </nav>   
- </hearder>
+   
+  	</ul></nav>   
+ 	</hearder
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
   	<img src="img/ebanner.jpg" alt="cellphone_banner" >
@@ -36,7 +39,7 @@
  
 	<div id="row2">
 		<ul>
-			<li><a href="home.html">Home</a></li>
+			<li><a href="Homepage.html">Home</a></li>
 			<li> > </li>
     		<li><a href="cellphone.html">Category</a></li>
     		<li> > </li>
@@ -54,29 +57,32 @@
 				</tr>
 				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
-					<p> 4-inch (diagonal) Retina display with 1136-by-640 resolution</p>
+					<p style ="background-color:#C8CBCC"> 4-inch (diagonal) Retina display with 1136-by-640 resolution</p>
 					<p> Touch ID fingerprint sensor</p>
-					<p>A9 chip with M9 motion coprocessor</p>
+					<p style ="background-color:#C8CBCC">A9 chip with M9 motion coprocessor</p>
 					<p>12MP iSight camera with Focus Pixels, True Tone flash and Live Photos</p>
-					<p>4K video recording at 30 fps and slo-mo video recording for 1080p at 120 fps</p>
+					<p style ="background-color:#C8CBCC">4K video recording at 30 fps and slo-mo video recording for 1080p at 120 fps</p>
 					<p>1.2MP FaceTime HD camera with Retina Flash</p>
-					<p>Second-generation Touch ID</p>
+					<p style ="background-color:#C8CBCC">Second-generation Touch ID</p>
 					<p>iOS 9 and iCloud</p>
-					<p>LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
+					<p style ="background-color:#C8CBCC">LTE Advanced1 and 802.11a/b/g/n/ac and Wi-Fi with MIMO</p>
 				</div>
 				</tr>
 			</table>
 		</section>
-		<section id = "picture">
+		<div id = "picture">
+			<div id = "item1"><img  src=  "img/iphonese.png" alt = "iphone se"></div>
+			<div id = "item2"><img  src = "img/se3.png" alt = "iphone se"></div>
+			<div id = "item3"><img  src = "img/se.jpg" alt = "iphone se"></div>	
+		</div>			
 			
-			<img src= "img/iphonese.png" alt = "iphone se" >
-		</section>
+		
 	</div>
 
 	
-<footer>
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-</footer>
+</div>
 
 
 </body>
