--- a/4:14/rcavking.html
+++ b/4:14/rcavking.html
@@ -15,17 +15,16 @@
 	<h1>BEST Electronics</h1>
 
   <nav><ul>
-    <li><a href="Homepage.html">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+  <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">CellPhones</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
-      <a href="laptop.html">Laptops </a>
     </div>
     </li>
-    <li><a href="">CONTACT</a></li>
   </ul>
   </nav>   
  </hearder>
@@ -74,10 +73,8 @@
 	</div>
 
 	
-<footer>
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-</footer>
-
-
+</div>
 </body>
 </html>
