--- a/4:14/LG.html
+++ b/4:14/LG.html
@@ -59,7 +59,7 @@
 					<p> Android 5.1 Lollipop OS</p>
 					<p style ="background-color:#C8CBCC"> 4G LTE speed</p>
 					<p>5" TFT touch screen</p>
-					5MP rear-facing camera</p>
+					<p style ="background-color:#C8CBCC">5MP rear-facing camera</p>
 				</div></tr>
 			</table>
 		</section>
